# sanji

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  todo
examples/: DotPlot.cpp  HeatQuiver.cpp  Quiver.cpp  ShowImage.cpp  SimpleLinePlot.cpp  example.cpp  example1.cpp
include/: Colors.hpp  Figure.hpp  HTicksArea.hpp  LimitsInfo.hpp  PlotArea.hpp  PlotData.hpp  PlotUI.hpp  RenderArea.hpp  Sanji.hpp  TicksArea.hpp  VTicksArea.hpp  types.hpp
src/: Colormaps.cpp  Colors.cpp  Figure.cpp  HTicksArea.cpp  PlotArea.cpp  PlotUI.cpp  RenderArea.cpp  Sanji.cpp  TicksArea.cpp  VTicksArea.cpp  help_.cpp
tests/: tests.cpp
